# stl-algorithms

./: CMakeLists.txt
lib/: CMakeLists.txt  algoritmics.cpp  algoritmics.h
tests/: CMakeLists.txt  algo_tests.cpp
